# airsense-ml

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  cliff.toml  docker-compose.airflow.yaml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: app.py
api/adapters/: prediction_adapter.py
api/endpoints/: index.html
api/schemas/: __init__.py  batch.py  health.py  model_info.py  monitoring.py
api/v1/: __init__.py  health.py  model_info.py  monitoring.py  predict.py
app/: __init__.py  main.py
app/features/: feature_engineering.py
architecture/overview/: index.html
architecture/structure/: index.html
bruno/: bruno.json  health.bru  model_info.bru  monitoring_report.bru  predict_batch.bru  predict_single.bru
changelog/: index.html
configs/: delhi.yaml  model_config.yaml  model_configs.yaml
dags/: airsense_training_pipeline.py
data/: raw.dvc
data/sources/: index.html
development/log/: index.html
development/pre_commit/: index.html
development/security/: index.html
development/tech_stack/: index.html
docs/: development_log.md  index.md  install_pre_commit_hook.md  model_evaluation_metrics.md  tech_stack.md
docs/api/: endpoints.md
docs/architecture/: overview.md  structure.md
docs/data/: sources.md
docs/development/: ci.md  log.md  orchestration.md  pre_commit.md  security.md  tech_stack.md  testing.md  tuning.md
docs/getting_started/: installation.md  quickstart.md
docs/ml/: data_pipeline.md  feature_engineering.md  training.md
getting_started/installation/: index.html
getting_started/quickstart/: index.html
ml/data_pipeline/: index.html
ml/feature_engineering/: index.html
ml/metrics/: index.html
ml/training/: index.html
models/: best_model.pkl.dvc
notebooks/: 01_eda.ipynb
scripts/: menu.py
search/: search_index.json
src/: __init__.py  main.py
src/api/: app.py
src/api/adapters/: __init__.py  prediction_adapter.py
src/api/schemas/: __init__.py  batch.py  prediction.py
src/api/utils/: rate_limit.py
src/api/v1/: __init__.py  health.py  model_info.py  monitoring.py  predict.py
src/core/: __init__.py  api_lifespan.py  bootstrap.py  config.py  logger.py
src/data/: __init__.py  loader.py  transform.py  validator.py
src/db/: __init__.py  connection.py  models.py
src/db/migrations/: env.py
src/features/: __init__.py  feature_encoding.py  feature_engineering.py  feature_pipeline.py  preprocessing.py
src/models/: evaluate.py  predict.py  registry.py  train.py  tune.py
src/monitoring/: __init__.py  drift.py
src/utils/: __init__.py  metrics_display.py  paths.py  warnings.py
tests/: conftest.py
tests/api/: test_predict.py
tests/data/: test_loader.py
