[project]
version = "0.1.0"
name = "airsense-ml"
description = "AirSense ML is a production-grade regression system that predicts Air Quality Index (AQI) and individual pollutant levels (PM2.5, NO2, etc.) for a target city."
authors = [{ name = "Chitrank Agnihoti", email = "chitrank2050@gmail.com" }]
requires-python = ">=3.12"
license = { file = "LICENCE" }
readme = { file = "README.md", content-type = "text/markdown" }

# Production dependencies
dependencies = [
  "dvc>=3.66.1",
  "jupyter>=1.1.1",
  "lightgbm>=4.6.0",
  "loguru>=0.7.3",
  "matplotlib>=3.10.8",
  "mlflow>=2.19.0",
  "numpy>=2.4.2",
  "pandas>=2.2.0,<3.0.0",
  "rich>=14.3.3",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "setuptools>=75.0.0",
  "shap>=0.49.1",
  "xgboost>=3.2.0",
]

[dependency-groups]
dev = ["build>=1.4.0", "ruff>=0.14.13", "questionary>=2.0", "pre-commit>=4.5.1"]

[project.scripts]
dev = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
