[project]
name = "airsense-ml"
version = "0.3.0"
description = "AirSense ML is a production-grade regression system that predicts Air Quality Index (AQI) and individual pollutant levels (PM2.5, NO2, etc.) for a target city."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Chitrank Agnihoti", email = "chitrank2050@gmail.com" }]

# Production dependencies
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  # Data versioning
  "dvc>=3.66.1",
  # API serving
  "fastapi>=0.115.0",
  # Core ML inference
  "greenlet>=3.3.2",
  "lightgbm>=4.6.0",
  # Application
  "loguru>=0.7.3",
  "numpy>=2.4.2",
  "pandas>=2.2.0,<3.0.0",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.13.1",
  "rich>=14.3.3",
  "scikit-learn>=1.8.0",
  "setuptools>=75.0.0",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.48",
  "supabase>=2.0.0",
  "tenacity>=9.1.4",
  "uvicorn[standard]>=0.34.0",
  "xgboost>=3.2.0",
]

[project.scripts]
dev = "src.main:main"

[dependency-groups]
training = [
  "evidently>=0.7.21",
  # Visualisation
  "matplotlib>=3.10.8",
  # Experiment tracking
  "mlflow>=2.19.0",
  # Hyperparameter tuning
  "optuna>=3.0.0",
  "seaborn>=0.13.2",
  # Explainability
  "shap>=0.49.1",
]

dev = [
  # Code quality
  "build>=1.4.0",
  # Notebooks — local exploration only
  "git-cliff>=2.12.0",
  "jupyter>=1.1.1",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.5",
  "mkdocstrings[python]>=1.0.3",
  "pre-commit>=4.5.1",
  "questionary>=2.0",
  "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "notebooks",
  "scripts",
]
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "PTH",
  "G",
  "PD",
  "NPY",
  "PERF",
  "RUF",
]
ignore = ["E501", "B008", "G004"]
dummy-variable-rgx = "^_.*"

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"src/models/registry.py" = ["F401"]  # MODEL_MAP exports are used externally
"src/api/schemas/*" = ["UP007"]  # Pydantic v2 needs Optional in some cases
"notebooks/*" = ["ALL"]  # never lint notebooks

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
